[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/GameTemplate/GUI/OptionsSections/DarkerPanel.tres" type="StyleBox" id=1]
[ext_resource path="res://addons/GameTemplate/GUI/OptionsSections/Game.gd" type="Script" id=2]
[ext_resource path="res://addons/GameTemplate/Assets/Fonts/pixellocale_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/GameTemplate/Assets/Fonts/pixellocale_8.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/GameTemplate/GUI/Buttons/ToggleButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/GameTemplate/GUI/Buttons/DefaultButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/GameTemplate/GUI/default_theme.tres" type="Theme" id=7]

[node name="Game" type="VBoxContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0
custom_constants/separation = 1
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 304.0
margin_bottom = 144.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameLabel" type="Label" parent="Panel/VBoxContainer"]
margin_right = 304.0
margin_bottom = 34.0
size_flags_horizontal = 5
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Game"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 38.0
margin_right = 304.0
margin_bottom = 38.0

[node name="LeftPanel" type="Panel" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="Panel/VBoxContainer/HBoxContainer/LeftPanel/VBoxContainer"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/LeftPanel/VBoxContainer"]
margin_left = 20.0
margin_top = 34.0
margin_right = 129.0
margin_bottom = 58.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DifficultyLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/LeftPanel/VBoxContainer/HBoxContainer"]
margin_right = 51.0
margin_bottom = 24.0
size_flags_horizontal = 5
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Difficulty"
align = 1

[node name="DifficultySelect" type="OptionButton" parent="Panel/VBoxContainer/HBoxContainer/LeftPanel/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 109.0
margin_bottom = 24.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "Hard"

[node name="RightPanel" type="Panel" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="Control2" type="Control" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer"]
margin_right = 150.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer"]
margin_left = 33.0
margin_top = 9.0
margin_right = 116.0
margin_bottom = 27.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Blood" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_right = 83.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
text = "Blood / Gore"

[node name="Control" type="Control" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer"]
margin_top = 31.0
margin_right = 150.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer"]
margin_left = 31.0
margin_top = 60.0
margin_right = 118.0
margin_bottom = 78.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Pacific" parent="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer/HBoxContainer2" instance=ExtResource( 5 )]
margin_right = 87.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
text = "Pacific Mode"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 42.0
margin_right = 304.0
margin_bottom = 144.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 5
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 4.0
margin_right = 300.0
margin_bottom = 98.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 145.0
margin_right = 304.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 137.0
margin_right = 166.0
margin_bottom = 19.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 1

[node name="Back" parent="MarginContainer/VBoxContainer" groups=["Game"] instance=ExtResource( 6 )]
margin_right = 29.0
text = "Back"

[connection signal="item_selected" from="Panel/VBoxContainer/HBoxContainer/LeftPanel/VBoxContainer/HBoxContainer/DifficultySelect" to="." method="_on_DifficultySelect_item_selected"]
[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer/HBoxContainer/Blood" to="." method="_on_Blood_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/HBoxContainer/RightPanel/VBoxContainer/HBoxContainer2/Pacific" to="." method="_on_Pacific_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
